fixed header alignmnent

--- a/css/style.css
+++ b/css/style.css
@@ -3470,7 +3470,7 @@ input[type="button"].btn-block {
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
+  margin-right: 0rem;
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap; }
@@ -3511,7 +3511,7 @@ input[type="button"].btn-block {
   align-items: center; }
 
 .navbar-toggler {
-  padding: 0.25rem 0.75rem;
+  padding: 0.25rem 0.25rem;
   font-size: 1.25rem;
   line-height: 1;
   background-color: transparent;
